# draft-framework

./: AGENTS.md  AI_INDEX.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  HISTORY.md  README.md  RELEASE.md  ROADMAP.md  VERSIONING.md  draft-framework.yaml  install-draft-table.sh  install.ps1  install.sh  llms.txt  pyproject.toml  run.ps1  security.md
.github/: copilot-instructions.md  pull_request_template.md
aags/: aag-appliance-abb.yaml  aag-product-service.yaml  aag-saas-service.yaml  aag.da.yaml  aag.host.yaml  aag.ra.yaml  aag.sdm.yaml  aag.service.dbms.yaml  aag.service.yaml
abbs/: abb-agent-crowdstrike-falcon.yaml  abb-appliance-aws-lambda-runtime.yaml  abb-os-ubuntu-2204.yaml
app/: DEPLOYMENT.md  Dockerfile  README.md  __init__.py
compliance-frameworks/: framework-nist-csf.yaml  framework-organization-controls.yaml  framework-roper-controls.yaml  framework-security-compliance-controls.yaml  framework-soc2.yaml  framework-tx-ramp.yaml
compliance-mappings/: aagmap-security-compliance-controls-aag-da.yaml  aagmap-security-compliance-controls-aag-host.yaml  aagmap-security-compliance-controls-aag-sdm.yaml  aagmap-security-compliance-controls-aag-service-dbms.yaml  aagmap-security-compliance-controls-aag-service.yaml
compliance-profiles/: profile-nist-csf.yaml  profile-security-compliance-controls.yaml  profile-soc2.yaml  profile-tx-ramp.yaml
docs/: CNAME  ai-rebuild-prompt.md  company-vocabulary.html  index.html  user-manual.html
domains/: compute.yaml
draft_table/: __init__.py  catalog.py  cli.py  config.py  draftsman.py  github.py  onboard.py  paths.py  (+5 more)
(+327 files in other folders)
